# popvars

./: Cargo.toml  National Morale.ods  README.md
examples/sc-mod/: city.csv  collateral hit.txt  country.csv  expr expansion.rs  main.rs  national morale popped.txt  national morale.csv  national morale.txt  team.csv
src/: definition.rs  expr.rs  lib.rs  main.rs  table.rs  template.rs  test_utils.rs
src/definition/: field.rs  value.rs  vars.rs
src/expr/: parsing.rs
tests/: for_loop.rs  integration.rs  simple.rs
tests/cases/: for-loop-nested.md  mod.rs  simple.md  test-parsing-test.md  test_utils.rs
tests/cases/for-loop/: for-loop-nested-deep.md  for-loop-other-index.md  for-loop-other.md  for-loop-where-clause-lookup.md  for-loop-where-clause.md
tests/cases/if/: if-lookup.md  if.md
tests/cases/include/: include-lookup-as-context.md  include-multi.md  include.md  loop-in-include.md
