[package]
name = "popvars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
calamine = "0.22.1"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
erreport = { path = "../erreport" }
indoc = "2.0.4"
parsely = { git = "https://github.com/drmason13/parsely", branch = "develop" }
regex = "1.10.2"
